--- a/Best-Time-to-Buy-and-Sell-Stock-II.html
+++ b/Best-Time-to-Buy-and-Sell-Stock-II.html
@@ -8,7 +8,7 @@
 <body>
     
 <script>
-function stockProfit(prices){
+function maxProfit(prices){
 let profit = 0;
 for(let i = 1; i < prices.length; i++){
     if(prices[i] > prices[i - 1]){
@@ -18,9 +18,9 @@ for(let i = 1; i < prices.length; i++){
 }
 return profit;
 }
-console.log(stockProfit([7,1,5,3,6,4]))
-console.log(stockProfit([1,2,3,4,5]))
-console.log(stockProfit([7,6,4,3,1]))
+console.log(maxProfit([7,1,5,3,6,4]))
+console.log(maxProfit([1,2,3,4,5]))
+console.log(maxProfit([7,6,4,3,1]))
     
 </script>
 </body>
