--- a/Fizz-Buzz.html
+++ b/Fizz-Buzz.html
@@ -21,7 +21,7 @@
                     arr.push("Buzz")
                 }
                 else{
-                    arr.push(i)
+                    arr.push(String(i))
                 }
                 i++
             }
