find disappeared numbers

--- a/MissingNumber.html
+++ b/MissingNumber.html
@@ -20,6 +20,9 @@
 };
 console.log(missingNumber([3,0,1]))
 console.log(missingNumber([0,1]))
+console.log(missingNumber([4,5,7]))
+console.log(missingNumber([3, 4, -1, 1]))
+
 
     </script>
 </body>
